# ComfyUI_Image_Anything

./: .gitignore  LICENSE  README.md  TODO.md  __init__.py  config.json  dual_image_saver.py  example_workflow.json  folder_picker_routes.py  pyproject.toml  requirements.txt  test_new_nodes.py  validate_design.py  validate_text_decoupling.py
nodes/: __init__.py  batch_image_saver.py  dataset_utils.py  image_iterator.py  image_saver.py  smart_resize.py  text_blocker.py
web/js/: dynamic_inputs_extension.js  image_iterator_folder_picker.js  text_blocker.js
workflow/: example_workflow.json  example_workflow_v2.json  example_workflow_v2_text.json
