[project]
name = "ComfyUI-Image-Anything"
description = "Batch save workflow outputs with organized folders, and automate dataset creation for image editing models (Qwen Edit, Kontext). Features auto-iteration, structured saving, and failed image re-processing."
version = "1.0.0"
license = {file = "LICENSE"}
authors = [{name = "HuangYuChuh"}]
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/HuangYuChuh/ComfyUI_Image_Anything"
Repository = "https://github.com/HuangYuChuh/ComfyUI_Image_Anything"

[tool.comfy]
PublisherId = "HuangYuChuh"
DisplayName = "ComfyUI Image Anything"
Icon = ""